partie 2 pas corrigé

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -2,7 +2,14 @@ NAME		= libft.a
 
 SRC_DIR		= .
 
-SRCS		= ${SRC_DIR}/libft00.c ${SRC_DIR}/libft01.c ${SRC_DIR}/libft02.c ${SRC_DIR}/libft03.c ${SRC_DIR}/libft04.c
+SRCS		= ${SRC_DIR}/libft00.c \
+				${SRC_DIR}/libft01.c \
+				${SRC_DIR}/libft02.c \
+				${SRC_DIR}/libft03.c \
+				${SRC_DIR}/libft04.c \
+				${SRC_DIR}/libft05.c \
+				${SRC_DIR}/libft06.c \
+				${SRC_DIR}/libft07.c
 
 CC			= cc
 
@@ -24,6 +31,10 @@ ${NAME}:	${OBJS}
 			${RL} ${NAME}
 
 all:		${NAME}
+
+so:
+			$(CC) -fPIC $(CFLAGS) -c $(SRCS)
+			gcc -shared -o libft.so $(OBJS)
 
 clean:
 			${RM} ${OBJS}
