--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -1,8 +1,12 @@
-NAME		= a.out
+NAME		= libftprintf.a
 
 SRC_DIR		= .
 
-SRCS		= ${SRC_DIR}/ft.printf.c
+SRCS		= ${SRC_DIR}/ft_printf.c \
+				${SRC_DIR}/ft_create_output.c \
+				${SRC_DIR}/ft_parsing_tags.c \
+				${SRC_DIR}/ft_read_arg.c \
+				${SRC_DIR}/ft_printf_parsing.c
 
 CC			= cc
 
@@ -24,9 +28,6 @@ ${NAME}:	${OBJS}
 			${RL} ${NAME}
 
 all:		${NAME}
-
-bonus:		$(OBJS) $(BONUS_OBJ)
-			$(AR) $(NAME) $(OBJS) $(BONUS_OBJ)
 
 clean:
 			${RM} ${OBJS}
