--- a/cube3D/Makefile
+++ b/cube3D/Makefile
@@ -1,23 +1,27 @@
 NAME		= cube3d
 
+LIB_LINUX	= -lft -lmlx -lXext -lX11 -lm -lbsd
+LIB_MAC		= -lft -I/usr/local/include -L/usr/local/lib -lmlx -framework OpenGL -framework AppKit
+LIB		= $(LIB_MAC)
+
 SRC_DIR		= .
 
-SRC			= ${SRC_DIR}/main.c \
-				${SRC_DIR}/color.c \
-				${SRC_DIR}/divers.c \
-				${SRC_DIR}/rendering.c \
-				${SRC_DIR}/set_input.c \
-				${SRC_DIR}/drawing.c \
-				${SRC_DIR}/move_camera.c \
-				${SRC_DIR}/key_hook.c \
-				${SRC_DIR}/motion_hook.c \
-				${SRC_DIR}/grid.c \
-				${SRC_DIR}/raycasting.c \
-				${SRC_DIR}/maths.c \
-				${SRC_DIR}/colision.c \
-				${SRC_DIR}/raycasting_dda.c \
-				${SRC_DIR}/read_img.c \
-				${SRC_DIR}/get_next_line.c \
+SRC		= ${SRC_DIR}/main.c \
+			${SRC_DIR}/color.c \
+			${SRC_DIR}/divers.c \
+			${SRC_DIR}/rendering.c \
+			${SRC_DIR}/set_input.c \
+			${SRC_DIR}/drawing.c \
+			${SRC_DIR}/move_camera.c \
+			${SRC_DIR}/key_hook.c \
+			${SRC_DIR}/motion_hook.c \
+			${SRC_DIR}/grid.c \
+			${SRC_DIR}/raycasting.c \
+			${SRC_DIR}/maths.c \
+			${SRC_DIR}/colision.c \
+			${SRC_DIR}/raycasting_dda.c \
+			${SRC_DIR}/read_img.c \
+			${SRC_DIR}/get_next_line.c \
 
 OBJ			= $(SRC:.c=.o)
 
@@ -27,7 +31,7 @@ LIBFT_A		= ${SRC_DIR_LIBFT}/libft.a
 
 CC			= cc
 
-CFLAGS		= -Wall -Wextra -Werror
+CFLAGS		= 
 
 AR			= ar rcs
 
@@ -39,7 +43,7 @@ RM			= rm -f
 			${CC} ${CFLAGS} -I includes -c $< -o ${<:.c=.o}
 
 ${NAME}:	${OBJ}
-			${CC} ${CFLAGS} -o $@ $^ ${LIBFT_A} -L ./libft -lft -lmlx -lXext -lX11 -lm -lbsd
+			${CC} ${CFLAGS} -o $@ $^ ${LIBFT_A} -L ./libft LIB
 
 all:		${NAME}
 
