--- a/ft_printf/libft/Makefile
+++ b/ft_printf/libft/Makefile
@@ -2,14 +2,40 @@ NAME		= libft.a
 
 SRC_DIR		= .
 
-SRCS		= ${SRC_DIR}/libft00.c \
-				${SRC_DIR}/libft01.c \
-				${SRC_DIR}/libft02.c \
-				${SRC_DIR}/libft03.c \
-				${SRC_DIR}/libft04.c \
-				${SRC_DIR}/libft05.c \
-				${SRC_DIR}/libft06.c \
-				${SRC_DIR}/libft07.c
+SRCS		= ${SRC_DIR}/ft_memset.c \
+				${SRC_DIR}/ft_bzero.c \
+				${SRC_DIR}/ft_memcpy.c \
+				${SRC_DIR}/ft_memccpy.c \
+				${SRC_DIR}/ft_memmove.c \
+				${SRC_DIR}/ft_memchr.c \
+				${SRC_DIR}/ft_memcmp.c \
+				${SRC_DIR}/ft_strlen.c \
+				${SRC_DIR}/ft_isalpha.c \
+				${SRC_DIR}/ft_isdigit.c \
+				${SRC_DIR}/ft_isalnum.c \
+				${SRC_DIR}/ft_isascii.c \
+				${SRC_DIR}/ft_isprint.c \
+				${SRC_DIR}/ft_toupper.c \
+				${SRC_DIR}/ft_tolower.c \
+				${SRC_DIR}/ft_strchr.c \
+				${SRC_DIR}/ft_strrchr.c \
+				${SRC_DIR}/ft_strncmp.c \
+				${SRC_DIR}/ft_strlcpy.c \
+				${SRC_DIR}/ft_strlcat.c \
+				${SRC_DIR}/ft_strnstr.c \
+				${SRC_DIR}/ft_atoi.c \
+				${SRC_DIR}/ft_calloc.c \
+				${SRC_DIR}/ft_strdup.c \
+				${SRC_DIR}/ft_substr.c \
+				${SRC_DIR}/ft_strjoin.c \
+				${SRC_DIR}/ft_strtrim.c \
+				${SRC_DIR}/ft_split.c \
+				${SRC_DIR}/ft_itoa.c \
+				${SRC_DIR}/ft_strmapi.c \
+				${SRC_DIR}/ft_putchar_fd.c \
+				${SRC_DIR}/ft_putnbr_fd.c \
+				${SRC_DIR}/ft_putstr_fd.c \
+				${SRC_DIR}/ft_putendl_fd.c \
 
 BONUS_SRCS	= ${SRC_DIR}/ft_lstnew.c \
 				${SRC_DIR}/ft_lstadd_front.c \
