--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -8,7 +8,7 @@ OBJ_DIR		= obj
 OBJS		= $(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
 
 CC			= cc
-CFLAGS		=
+CFLAGS		= -Wall -Wextra -Werror -fsanitize=address
 RM			= rm -f
 
 $(OBJ_DIR)/%.o:$(SRC_DIR)/%.c
