--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -14,7 +14,7 @@ OBJS_BUNUS	=	$(SRCS_BONUS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
 LIBS		= libft/libft.a
 
 CC			= cc
-CFLAGS		= -Wall -Wextra -Werror
+CFLAGS		= #-Wall -Wextra -Werror
 AR			= ar rcs
 RM			= rm -f
 
