--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -1,8 +1,9 @@
 NAME		= pipex
 
 SRC_DIR		= .
-SRCS		= $(patsubst %, $(SRC_DIR)/%, main.c exec_cmd.c utils.c libft.c ft_split.c ft_strjoin.c \
-				ft_gnl.c ft_putstr_fd.c ft_strncmp.c ft_strdup.c fonction.c)
+SRCS		= $(patsubst %, $(SRC_DIR)/%, main.c exec_cmd.c utils.c libft.c \
+				ft_split.c ft_strjoin.c ft_gnl.c ft_putstr_fd.c ft_strncmp.c \
+				ft_strdup.c fonction.c check_input.c)
 
 OBJ_DIR		= obj
 OBJS		= $(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
