--- a/philosophers/Makefile
+++ b/philosophers/Makefile
@@ -1,15 +1,14 @@
-NAME		= pipex
+NAME		= philo
 
-SRC_DIR		= .
-SRCS		= $(patsubst %, $(SRC_DIR)/%, main.c exec_cmd.c utils.c libft.c \
-				ft_split.c ft_strjoin.c ft_gnl.c ft_putstr_fd.c ft_strncmp.c \
-				ft_strdup.c fonction.c check_input.c)
+SRC_DIR		= src
+SRCS		= $(patsubst %, $(SRC_DIR)/%, main.c thread_philo.c ft_atoi.c \
+				initialisation.c divers.c)
 
 OBJ_DIR		= obj
 OBJS		= $(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
 
 CC			= cc
-CFLAGS		= -Wall -Wextra -Werror
+CFLAGS		= -fsanitize=address #-Wall -Wextra -Werror
 RM			= rm -f
 
 $(OBJ_DIR)/%.o:$(SRC_DIR)/%.c
