--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -1,14 +1,15 @@
 CC			= gcc
 CFLAGS		= -fsanitize=address -g #-Wall -Wextra -Werror
 RM			= rm -f
+LIB			= libft/libft.a
 
 #----------------------------MANDATORY----------------------------
 
 NAME		= minishell
 
 SRC_DIR		= .
-SRCS		= $(patsubst %, $(SRC_DIR)/%, main.c exec_cmd.c fonction.c ft_putstr_fd.c \
-				ft_split.c ft_strdup.c ft_strjoin.c ft_strncmp.c ft_strlen.c utils.c)
+SRCS		= $(patsubst %, $(SRC_DIR)/%, main.c exec_cmd.c fonction.c \
+				utils.c)
 OBJ_DIR		= obj
 OBJS		= $(SRCS:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
 
@@ -17,7 +18,8 @@ $(OBJ_DIR)/%.o:$(SRC_DIR)/%.c
 			@$(CC) $(CFLAGS) -I includes -c $< -o $@
 
 $(NAME):	$(OBJS)
-			@$(CC) $(CFLAGS) $(OBJS) -o $@ -lreadline
+			@make -C libft
+			@$(CC) $(CFLAGS) $(LIB) $(OBJS) -o $@ -lreadline
 			@echo "Done"
 
 #------------------------------BONUS------------------------------
@@ -34,7 +36,8 @@ $(OBJ_DIR_BONUS)/%.o:$(SRC_DIR_BONUS)/%.c
 			@$(CC) $(CFLAGS) -I includes -c $< -o $@
 
 $(NAME_BONUS):	$(OBJS_BONUS)
-			@$(CC) $(CFLAGS) $(OBJS_BONUS) -o $@
+			@make -C libft
+			@$(CC) $(CFLAGS) $(LIB) $(OBJS_BONUS) -o $@ -lreadline
 			@echo "Done"
 
 #-----------------------------------------------------------------
