--- a/cube3D/libft/Makefile
+++ b/cube3D/libft/Makefile
@@ -1,61 +1,53 @@
 NAME		= libft.a
 
-SRC_DIR		= .
+SRC_DIR		= src
+SRCS		=	$(patsubst %, $(SRC_DIR)/%, ft_memset.c ft_bzero.c \
+				ft_memcpy.c ft_memccpy.c ft_memmove.c ft_memchr.c \
+				ft_memcmp.c ft_strlen.c ft_isalpha.c ft_isdigit.c \
+				ft_isalnum.c ft_isascii.c ft_isprint.c ft_toupper.c \
+				ft_tolower.c ft_strchr.c ft_strrchr.c ft_strncmp.c \
+				ft_strlcpy.c ft_strlcat.c ft_strnstr.c ft_atoi.c \
+				ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c \
+				ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c \
+				ft_putchar_fd.c ft_putnbr_fd.c ft_putstr_fd.c ft_putendl_fd.c \
+				ft_atol.c ft_atof.c ft_gnl.c ft_split_utils.c)
 
-SRCS		= ${SRC_DIR}/libft00.c \
-				${SRC_DIR}/libft01.c \
-				${SRC_DIR}/libft02.c \
-				${SRC_DIR}/libft03.c \
-				${SRC_DIR}/libft04.c \
-				${SRC_DIR}/libft05.c \
-				${SRC_DIR}/libft06.c \
-				${SRC_DIR}/libft07.c
+LIST_DIR	= src
+LIST_SRCS	=	$(patsubst %, $(LIST_DIR)/%, ft_lstnew.c ft_lstadd_front.c \
+				ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c \
+				ft_lstclear.c ft_lstiter.c ft_lstmap.c ft_lstget_front.c \
+				ft_lstprint.c)
 
-BONUS_SRCS	= ${SRC_DIR}/ft_lstnew.c \
-				${SRC_DIR}/ft_lstadd_front.c \
-				${SRC_DIR}/ft_lstsize.c \
-				${SRC_DIR}/ft_lstlast.c \
-				${SRC_DIR}/ft_lstadd_back.c \
-				${SRC_DIR}/ft_lstdelone.c \
-				${SRC_DIR}/ft_lstclear.c \
-				${SRC_DIR}/ft_lstiter.c \
-				${SRC_DIR}/ft_lstmap.c
+OBJ_DIR		= obj
+OBJS		=	$(SRCS:$(SRC_DIR)/%.c=${OBJ_DIR}/%.o) \
+				$(LIST_SRCS:$(LIST_DIR)/%.c=${OBJ_DIR}/%.o) \
 
 CC			= cc
-
 CFLAGS		= -Wall -Wextra -Werror
-
 AR			= ar rcs
-
-RL			= ranlib
-
-OBJS		= $(SRCS:.c=.o)
-
-BONUS_OBJ	= $(BONUS_SRCS:.c=.o)
-
 RM			= rm -f
 
-.c.o:
-			${CC} ${CFLAGS} -I includes -c $< -o ${<:.c=.o}
+${OBJ_DIR}/%.o:$(SRC_DIR)/%.c
+			@mkdir -p ${OBJ_DIR}
+			@${CC} ${CFLAGS} -I includes -c $< -o $@
 
 ${NAME}:	${OBJS}
-			${AR} ${NAME} ${OBJS}
-			${RL} ${NAME}
+			@${AR} ${NAME} ${OBJS}
+			@echo "Done"
 
 all:		${NAME}
 
-bonus:		$(OBJS) $(BONUS_OBJ)
-			$(AR) $(NAME) $(OBJS) $(BONUS_OBJ)
-
 so:
-			$(CC) -fPIC $(CFLAGS) -c $(SRCS) $(BONUS_SRCS)
-			gcc -shared -o libft.so $(OBJS) $(BONUS_OBJ)
+			$(CC) -fPIC $(CFLAGS) -c $(SRCS) $(LIST_SRCS)
+			gcc -shared -o libft.so ${OBJS}
 
 clean:
-			${RM} ${OBJS}
+			@${RM} ${OBJS}
+			@echo "Remove obj"
 
 fclean:		clean
-			${RM} ${NAME}
+			@${RM} ${NAME}
+			@echo "Remove ${NAME}"
 
 re:			fclean all
 
